Setting tab heights to prevent jumping while their numbers popualate.

--- a/media/scss/lightbox-newui.scss
+++ b/media/scss/lightbox-newui.scss
@@ -219,10 +219,6 @@ input.text {
     font-weight: normal;
 }
 
-#lightbox .resources-lightbox-content ul.nootabs-menus li.end-group-menu {
-    margin-right: 12px;
-}
-
 #lightbox .resources-lightbox-content ul.nootabs-menus li.nootabs-selected-menu a span {
     font-weight: bold;
 }
